[project]
name = "agent-ops-hub"
version = "0.1.0"
description = "End-to-end AI orchestration platform demo"
authors = [
    { name = "Sam Robertson", email = "samuelrobertson@gmail.com" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "langchain>=0.3",
    "langgraph>=0.2",
    "faiss-cpu",
    "semantic-kernel",
    "python-multipart"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
